--- a/h5c/vic/src/main/locale/en_US/com_vmware_vic.properties
+++ b/h5c/vic/src/main/locale/en_US/com_vmware_vic.properties
@@ -37,6 +37,38 @@ vic_workspace.container.datagrid.columns.portMapping=Port Mapping
 vic_workspace.container.datagrid.columns.name=VM
 vic_workspace.container.datagrid.columns.imageName=Image
 
+# vch compute capacity
+vch.computeCapacity.vmHostAffinity.title=VM-Host Affinity
+vch.computeCapacity.vmHostAffinity.label=Create a DRS VM Group for this VCH
+vch.computeCapacity.vmHostAffinity.info=Checking this box will create a DRS VM Group with the same name as the VCH. Container VMs created via the VCH will automatically be added to the group. The group will be deleted when the VCH is deleted. To make use of this group, create a VM-Host Affinity rule on the cluster containing the VCH.
+vch.computeCapacity.vmHostAffinity.groupNameError=A DRS VM Group with the same name already exists
+vch.computeCapacity.vmHostAffinity.drsError=Cluster DRS is disabled
+
+# vch storage
+vch.storage.imageDataStore=Image datastore
+vch.storage.fileFolder=File folder
+vch.storage.maxContainerVmImageSize=Maximum Container VM image size
+vch.storage.volumeDatastores=Volume datastores
+vch.storage.volumeDatastore=Volume datastore
+vch.storage.datastore=Datastore
+vch.storage.folder=Folder
+vch.storage.volumeStoreName=Volume store name
+vch.storage.of=of
+vch.storage.volumes=volumes
+vch.storage.subTitle=Select the image datastore to be used to hold container images and an optional folder.
+vch.storage.notSelected=Not selected
+vch.storage.free=free
+vch.storage.maxContainerVm=Max Container VM
+vch.storage.imageSize=image size
+vch.storage.imageSizeEmptyTooltip=Base image size cannot be empty
+vch.storage.imageSizeNumericTooltip=Base image size should be numeric
+vch.storage.limitInfo=This limit cannot be changed after deploying the VCH
+vch.storage.imageSizeInfo=The size of the base image from which to create other images. You do not normally need to change this value. The default size is 8GB, but images are thin-provisioned so they do not usually consume 8GB of space.
+vch.storage.volumeDatastoresSubtitle=Make selected datastores available for docker volumes
+vch.storage.enableAnonymousVolumes=Enable anonymous volumes
+vch.storage.dockerVolNameEmptyTooltip=Docker volume name cannot be empty or contain blank spaces
+vch.storage.dockerVolNameCharsTooltip=Docker volume name contains characters that are not allowed
+
 # resources
 home.shortcut.icon = Embed("../../webapp/assets/vic-icons/32x32.png")
 viinventory.vic.icon = Embed("../../webapp/assets/vic-icons/16x16.png")
