--- a/h5c/vic/src/main/locale/en_US/com_vmware_vic.properties
+++ b/h5c/vic/src/main/locale/en_US/com_vmware_vic.properties
@@ -199,6 +199,20 @@ vch.registry.expires=expires
 vch.registry.replace=Replace
 vch.registry.select=Select
 
+# vch operations
+vch.operations.title=Operations User
+vch.operations.provideInfo=Provide vSphere user credential for the VCH to use when interacting with vSphere
+vch.operations.specifyInfo=Specify a non-administrative account to limit permissions for day-to-day VCH operations.
+vch.operations.vSphereUserCredentials=vSphere user credentials
+vch.operations.userNotEmpty=Operations user cannot be empty
+vch.operations.passNotEmpty=Operations user password cannot be empty
+vch.operations.grantPermissions=Grant this user any necessary permissions
+vch.operations.grantUserPermissions=Grant user necessary permissions
+vch.operations.yes=Yes
+vch.operations.no=No
+vch.operations.passwordPlaceholder=Password
+vch.operations.userPlaceholder=username@domain.local
+
 # resources
 home.shortcut.icon = Embed("../../webapp/assets/vic-icons/32x32.png")
 viinventory.vic.icon = Embed("../../webapp/assets/vic-icons/16x16.png")
